Attendance bug solved